--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -1,9 +1,13 @@
+name: first
+on: push
+jobs:       
         job1:
                 name: FirstJob
                 runs-on: ubuntu-latest
                 steps:
                         -name: Step one
                          uses: actions/checkout@v2
+
                         -name: Step two
                          run: env | sort
         job2:
@@ -12,6 +16,7 @@
                 steps:
                         -name: Step one
                          uses: actions/checkout@v2
+                         
                         -name: Step two
                          run: "Get-ChildItem Env: | Sort-Object Name"
 
